--- a/index.html
+++ b/index.html
@@ -2,15 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>LESS Demo</title>
-  <link rel="stylesheet" href="./dist/compiled.css">
-  </head>
-  <body>
-    <p><a href="https://spa.wangding.in">SPA 富应用开发课程资料</a></p>
-    <div class="slightly-rounded">slightly-rounded div</div>
-    <div class="very-rounded">
-      <blockquote>本电子书含 SPA 富应用开发课程的全部教学资料。</blockquote>
-    </div>
-  </body>
+  <title>rectangle</title>
+  <link rel="stylesheet" href="./layout.css">
+</head>
+<body>
+  <h1>hello ractangle</h1>
+  <div id="main">
+    <label>宽度：</label>
+    <input type="text" id="width">
+    <span>*</span>
+    <br>
+    <div id="width-validate"></div>
+    <label>高度：</label>
+    <input type="text" id="height">
+    <span>*</span>
+    <br>
+    <div id="height-validate"></div>
+    <input type="button" id="calc" value="计算">
+    <br>
+    <label>周长：</label>
+    <input type="text" id="perimeter" disabled>
+    <br>
+    <label>面积：</label>
+    <input type="text" id="area" disabled>
+  </div>
+  <div id="a">
+    <a href="http://jh2020jh.gitee.io/rectangle-check/check1/index.html">表单级校验</a>
+    <a href="http://jh2020jh.gitee.io/rectangle-check/check2/index.html">字段级校验</a>
+    <a href="http://jh2020jh.gitee.io/rectangle-check/check3/index.html">字符级校验</a>
+  </div>
+  <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js">
+  <script src="./main.js"></script>
+</body>
 </html>
-
